2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.22 released.

        * Fixed editing for FullAuto so the files open
          even when syntax errors are present.


2012-11-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.21 released.

        * Improved BerkeleyDB loading for FullAuto.


2012-11-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.20 released.

        * Added cache pass-through for FullAuto.


2012-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.19 released.

        * Added new BerkeleyDB variable to import list
          (needed for FullAuto).


2012-10-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.18 released.

        * Fixed some install issues when bunlded with FullAuto.


2012-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.17 released.

        * Added "help" and "admin" menus to all FullAuto menus.


2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.16 released.

        * Fixed username lookup when using FullAuto with TeamSite.


2012-04-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.15 released.

        * Fixed code for selecting fa_menu for FullAuto.


2012-03-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.14 released.

        * Removed temp error messages.


2012-02-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.13 released.

        * Fixed bug in summation menu.


2012-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.12 released.

        * Fixed bug returning pick from search menu.


2012-02-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.11 released.

        * Fixed bug returning hashes when when select is many
          on single level menu.

