@@ -1,3 +1,10 @@
+2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.23 released.
+
+        * 2.22 didn't have the updated Menus.pm.
+
+
 2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.22 released.
